--- a/react-app/src/components/ProductDisplay/product_display.css
+++ b/react-app/src/components/ProductDisplay/product_display.css
@@ -15,6 +15,13 @@
     padding: 10px;
 }
 
+@media screen and (max-width: 1200px) {
+    .products__display__container {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+    }
+}
+
 .all__products__image__container{
     display: flex;
     justify-content: center;
